# crew-ai-enterprise

./: LICENSE  README.md  pyproject.toml  report.md  requirements.txt
src/crew_ai_enterprise/: __init__.py  crew.py  main.py
src/crew_ai_enterprise/tools/: __init__.py  custom_tool.py
