[project]
name = "crew_ai_enterprise"
version = "0.1.0"
description = "crew-ai-enterprise using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
crew_ai_enterprise = "crew_ai_enterprise.main:run"
run_crew = "crew_ai_enterprise.main:run"
train = "crew_ai_enterprise.main:train"
replay = "crew_ai_enterprise.main:replay"
test = "crew_ai_enterprise.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
